src/main/java/org/generated/TuringMachineDefinitionParser.java
/* TuringMachineDefinitionParser.java */
/* Generated By:JavaCC: Do not edit this line. TuringMachineDefinitionParser.java */
package org.generated;
import org.turing2javagenerics.definition.*;
import java.io.FileInputStream;
import java.io.FileNotFoundException;import java.util.ArrayList;
import java.util.List;

import java.io.ByteArrayInputStream;
import java.nio.charset.StandardCharsets;
import org.turing2javagenerics.definition.*;

public class TuringMachineDefinitionParser implements TuringMachineDefinitionParserConstants {
  public static TuringMachineDefinition parseDef(final String source) throws ParseException {
    TuringMachineDefinitionParser parser
    = new TuringMachineDefinitionParser(
      new ByteArrayInputStream(source.getBytes(StandardCharsets.UTF_8)));
    return parser.parse();
    }

  public static TuringMachineDefinition parseFile(final String source) throws ParseException, FileNotFoundException {
    FileInputStream file = new FileInputStream(source);
    TuringMachineDefinitionParser parser
     = new TuringMachineDefinitionParser(file);
    return parser.parse();
  }

  final public TuringMachineDefinition parse() throws ParseException {String name;
State initial;
State halt;
List<State> states;
AlphabetSymbol blank;
List<AlphabetSymbol> alphabet;
List<Transition> transitions;
    jj_consume_token(REF);
name = token.image;
    jj_consume_token(OPEN_DEF);
    jj_consume_token(INITIAL);
    jj_consume_token(19);
    initial = state();
    jj_consume_token(HALT);
    jj_consume_token(19);
    halt = state();
    jj_consume_token(STATES);
    jj_consume_token(19);
    jj_consume_token(OPEN_PAR);
    states = parseStates(initial, halt);
    jj_consume_token(CLOSE_PAR);
    jj_consume_token(BLANK);
    jj_consume_token(19);
    blank = letter();
    jj_consume_token(ALPHABET);
    jj_consume_token(19);
    jj_consume_token(OPEN_PAR);
    alphabet = parseAlphabet(blank);
    jj_consume_token(CLOSE_PAR);
    jj_consume_token(TRANSITIONS);
    jj_consume_token(OPEN_DEF);
    transitions = parseTransitions();
    jj_consume_token(CLOSE_DEF);
    jj_consume_token(CLOSE_DEF);
    jj_consume_token(0);
{if ("" != null) return new TuringMachineDefinition(name, states, alphabet, transitions);}
    throw new Error("Missing return statement in function");
}

  final public List<State> parseStates(State initial, State halt) throws ParseException {final ArrayList<State> states = new ArrayList<>();
      states.add(initial);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case REF:{
      jj_consume_token(REF);
states.add(State.state(token.image));
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMMA:{
          ;
          break;
          }
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        jj_consume_token(COMMA);
        jj_consume_token(REF);
states.add(State.state(token.image));
      }
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      ;
    }
states.add(halt);
        {if ("" != null) return states;}
    throw new Error("Missing return statement in function");
}

  final public List<AlphabetSymbol> parseAlphabet(AlphabetSymbol blank) throws ParseException {final ArrayList<AlphabetSymbol> alphabet = new ArrayList<>();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case REF:{
      jj_consume_token(REF);
alphabet.add(AlphabetSymbol.letter(token.image));
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMMA:{
          ;
          break;
          }
        default:
          jj_la1[2] = jj_gen;
          break label_2;
        }
        jj_consume_token(COMMA);
        jj_consume_token(REF);
alphabet.add(AlphabetSymbol.letter(token.image));
      }
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      ;
    }
alphabet.add(blank);
            {if ("" != null) return alphabet;}
    throw new Error("Missing return statement in function");
}

  final public List<Transition> parseTransitions() throws ParseException {final ArrayList<Transition> transitions = new ArrayList<>();
    Transition transition;
    transition = parseTransition();
transitions.add(transition);
         transition = null;
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMMA:{
        ;
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        break label_3;
      }
      jj_consume_token(COMMA);
      transition = parseTransition();
transitions.add(transition);
         transition = null;
    }
{if ("" != null) return transitions;}
    throw new Error("Missing return statement in function");
}

  final public Transition parseTransition() throws ParseException {State state;
    State targetState;
    AlphabetSymbol letter;
    AlphabetSymbol targetLetter;
    Direction direction;
    jj_consume_token(OPEN_PAR);
    state = state();
    jj_consume_token(COMMA);
    letter = letter();
    jj_consume_token(CLOSE_PAR);
    jj_consume_token(ARROW);
    jj_consume_token(OPEN_PAR);
    targetState = state();
    jj_consume_token(COMMA);
    targetLetter = letter();
    jj_consume_token(COMMA);
    jj_consume_token(DIRECTION);
direction = Direction.valueOf(token.image);
    jj_consume_token(CLOSE_PAR);
{if ("" != null) return Transition.transition(state, letter, targetState, targetLetter, direction);}
    throw new Error("Missing return statement in function");
}

  final public State state() throws ParseException {
    jj_consume_token(REF);
{if ("" != null) return State.state(token.image);}
    throw new Error("Missing return statement in function");
}

  final public AlphabetSymbol letter() throws ParseException {
    jj_consume_token(REF);
{if ("" != null) return AlphabetSymbol.letter(token.image);}
    throw new Error("Missing return statement in function");
}

  /** Generated Token Manager. */
  public TuringMachineDefinitionParserTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[5];
  static private int[] jj_la1_0;
  static {
	   jj_la1_init_0();
	}
	private static void jj_la1_init_0() {
	   jj_la1_0 = new int[] {0x10000,0x40000,0x10000,0x40000,0x10000,};
	}

  /** Constructor with InputStream. */
  public TuringMachineDefinitionParser(java.io.InputStream stream) {
	  this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public TuringMachineDefinitionParser(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source = new TuringMachineDefinitionParserTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 5; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
	  ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 5; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public TuringMachineDefinitionParser(java.io.Reader stream) {
	 jj_input_stream = new SimpleCharStream(stream, 1, 1);
	 token_source = new TuringMachineDefinitionParserTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 5; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
	if (jj_input_stream == null) {
	   jj_input_stream = new SimpleCharStream(stream, 1, 1);
	} else {
	   jj_input_stream.ReInit(stream, 1, 1);
	}
	if (token_source == null) {
 token_source = new TuringMachineDefinitionParserTokenManager(jj_input_stream);
	}

	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 5; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public TuringMachineDefinitionParser(TuringMachineDefinitionParserTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 5; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(TuringMachineDefinitionParserTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 5; i++) jj_la1[i] = -1;
  }

  private Token jj_consume_token(int kind) throws ParseException {
	 Token oldToken;
	 if ((oldToken = token).next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 if (token.kind == kind) {
	   jj_gen++;
	   return token;
	 }
	 token = oldToken;
	 jj_kind = kind;
	 throw generateParseException();
  }


/** Get the next Token. */
  final public Token getNextToken() {
	 if (token.next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 jj_gen++;
	 return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
	 Token t = token;
	 for (int i = 0; i < index; i++) {
	   if (t.next != null) t = t.next;
	   else t = t.next = token_source.getNextToken();
	 }
	 return t;
  }

  private int jj_ntk_f() {
	 if ((jj_nt=token.next) == null)
	   return (jj_ntk = (token.next=token_source.getNextToken()).kind);
	 else
	   return (jj_ntk = jj_nt.kind);
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;

  /** Generate ParseException. */
  public ParseException generateParseException() {
	 jj_expentries.clear();
	 boolean[] la1tokens = new boolean[20];
	 if (jj_kind >= 0) {
	   la1tokens[jj_kind] = true;
	   jj_kind = -1;
	 }
	 for (int i = 0; i < 5; i++) {
	   if (jj_la1[i] == jj_gen) {
		 for (int j = 0; j < 32; j++) {
		   if ((jj_la1_0[i] & (1<<j)) != 0) {
			 la1tokens[j] = true;
		   }
		 }
	   }
	 }
	 for (int i = 0; i < 20; i++) {
	   if (la1tokens[i]) {
		 jj_expentry = new int[1];
		 jj_expentry[0] = i;
		 jj_expentries.add(jj_expentry);
	   }
	 }
	 int[][] exptokseq = new int[jj_expentries.size()][];
	 for (int i = 0; i < jj_expentries.size(); i++) {
	   exptokseq[i] = jj_expentries.get(i);
	 }
	 return new ParseException(token, exptokseq, tokenImage);
  }

  private boolean trace_enabled;

/** Trace enabled. */
  final public boolean trace_enabled() {
	 return trace_enabled;
  }

  /** Enable tracing. */
  final public void enable_tracing() {
  }

  /** Disable tracing. */
  final public void disable_tracing() {
  }

}
